chrome: header scrollbar err fix

--- a/temp33.css
+++ b/temp33.css
@@ -35,7 +35,6 @@ html {
     margin-bottom: 10px;
 
     overflow-y: hidden;
-    overflow-x: scroll;
 }
 
 .contentheader-title {
